# mousey

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  rustfmt.toml
.cargo/: config.toml
post_build/: sanitize.rs
resources/: mousey.rc
src/: main.rs  mouse_state.rs  win.rs
