[package]
name = "mousey"
version = "0.1.0"
authors = ["Eucladia <EucladiaLyra@gmail.com>"]
edition = "2018"
build = "build.rs"

[package.metadata]
author = "Ash"
file-name = "Mousey"
created-year = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.once_cell]
version = "1.5.2"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windowsx"]

[build-dependencies]
toml = "0.5.8"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.4.1"

[profile.release]
lto = true
codegen-units = 1
